Addresses Sonar smells added due to a rule update (#1445)
* addressing modernization-api sonar smells

* addressing page builder sonar smells

* more page builder smells