@@ -1,24 +1,9 @@
 package gov.cdc.nbs.questionbank.page.create;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.mockito.Mockito.when;
-
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-
-import gov.cdc.nbs.questionbank.entity.pagerule.WaRuleMetadata;
-import gov.cdc.nbs.questionbank.pagerules.repository.WaRuleMetaDataRepository;
-import org.junit.jupiter.api.Test;
-import org.mockito.ArgumentCaptor;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.Mockito;
-import org.mockito.MockitoAnnotations;
 import gov.cdc.nbs.questionbank.entity.PageCondMapping;
 import gov.cdc.nbs.questionbank.entity.WaTemplate;
 import gov.cdc.nbs.questionbank.entity.WaUiMetadata;
+import gov.cdc.nbs.questionbank.entity.pagerule.WaRuleMetadata;
 import gov.cdc.nbs.questionbank.entity.repository.PageCondMappingRepository;
 import gov.cdc.nbs.questionbank.entity.repository.WaTemplateRepository;
 import gov.cdc.nbs.questionbank.entity.repository.WaUiMetadataRepository;
@@ -27,7 +12,23 @@ import gov.cdc.nbs.questionbank.page.PageValidator;
 import gov.cdc.nbs.questionbank.page.request.PageCreateRequest;
 import gov.cdc.nbs.questionbank.page.response.PageCreateResponse;
 import gov.cdc.nbs.questionbank.page.util.PageConstants;
+import gov.cdc.nbs.questionbank.pagerules.repository.WaRuleMetaDataRepository;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.ArgumentCaptor;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.Mockito;
+import org.mockito.junit.jupiter.MockitoExtension;
 
+import java.util.ArrayList;
+import java.util.List;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.mockito.Mockito.when;
+
+@ExtendWith(MockitoExtension.class)
 class PageCreatorTest {
 
   @Mock
@@ -48,25 +49,21 @@ class PageCreatorTest {
   @InjectMocks
   private PageCreator pageCreator;
 
-  public PageCreatorTest() {
-    MockitoAnnotations.openMocks(this);
-  }
-
   @Test
   void testCreatePage() {
-    Long id = 1l;
+    Long id = 1L;
     PageCreateRequest request =
         new PageCreateRequest("INV",
-            Arrays.asList("1023"),
+            List.of("1023"),
             "TestPage",
-            10l,
+            10L,
             "HEP_Case_Map_V1.0",
             "unit test",
             "dataMart");
-    WaTemplate page = pageCreator.buildPage(request, "INV", 10l);
+    WaTemplate page = pageCreator.buildPage(request, "INV", 10L);
     page.setId(id);
     when(templateRepository.save(Mockito.any())).thenReturn(page);
-    PageCreateResponse response = pageCreator.createPage(request, 1l);
+    PageCreateResponse response = pageCreator.createPage(request, 1L);
     assertEquals(page.getId(), response.pageId());
     assertEquals(page.getTemplateNm(), response.pageName());
     assertEquals(page.getTemplateNm() + PageConstants.ADD_PAGE_MESSAGE, response.message());
@@ -75,25 +72,25 @@ class PageCreatorTest {
 
   @Test
   void testCopyWaTemplateUIMetaData() {
-    WaTemplate oldPage = getTemplate(10l);
+    WaTemplate oldPage = getTemplate(10L);
     when(waUiMetadatumRepository.findAllByWaTemplateUid(Mockito.any()))
-        .thenReturn(List.of(getwaUiMetaDtum(oldPage)));
-    WaTemplate newPage = getTemplate(20l);
+        .thenReturn(List.of(getwaUiMetaDatum(oldPage)));
+    WaTemplate newPage = getTemplate(20L);
     List<WaUiMetadata> result = pageCreator.copyWaTemplateUIMetaData(oldPage, newPage);
     assertNotNull(result);
-    assertEquals(newPage.getId(), result.get(0).getWaTemplateUid().getId());
+    assertEquals(newPage.getId(), result.getFirst().getWaTemplateUid().getId());
 
   }
 
   @Test
   void testCopyWaTemplateRuleMetaData() {
-    WaTemplate oldPage = getTemplate(10l);
+    WaTemplate oldPage = getTemplate(10L);
     when(waRuleMetaDataRepository.findByWaTemplateUid(Mockito.any()))
         .thenReturn(List.of(getwaRuleMetaDtum(oldPage)));
-    WaTemplate newPage = getTemplate(20l);
+    WaTemplate newPage = getTemplate(20L);
     List<WaRuleMetadata> result = pageCreator.copyWaTemplateRuleMetaData(oldPage, newPage);
     assertNotNull(result);
-    assertEquals(newPage.getId(), result.get(0).getWaTemplateUid());
+    assertEquals(newPage.getId(), result.getFirst().getWaTemplateUid());
 
   }
 
@@ -108,15 +105,15 @@ class PageCreatorTest {
         null,
         conditionIds,
         null,
-        0l,
+        0L,
         null,
         null,
         null);
-    Long templateId = 1l;
+    Long templateId = 1L;
     WaTemplate page = getTemplate(templateId);
     ArgumentCaptor<List<PageCondMapping>> captor = ArgumentCaptor.forClass(List.class);
     when(pageConMappingRepository.saveAll(captor.capture())).thenReturn(null);
-    pageCreator.createPageCondMappings(request, page, 2l);
+    pageCreator.createPageCondMappings(request, page, 2L);
     assertNotNull(captor.getValue());
     assertEquals(3, captor.getValue().size());
 
@@ -125,7 +122,7 @@ class PageCreatorTest {
   @Test
   void testBuildPage() {
     PageCreateRequest request = pageRequest();
-    WaTemplate page = pageCreator.buildPage(request, "INV", 10l);
+    WaTemplate page = pageCreator.buildPage(request, "INV", 10L);
     assertEquals("Draft", page.getTemplateType());
     assertEquals("PG_" + request.name(), page.getFormCd());
     assertEquals(request.name(), page.getTemplateNm());
@@ -134,24 +131,24 @@ class PageCreatorTest {
   private PageCreateRequest pageRequest() {
     return new PageCreateRequest(
         "INV",
-        Arrays.asList("1023"),
+        List.of("1023"),
         "TestPage",
-        10l,
+        10L,
         "HEP_Case_Map_V1.0",
         "unit test",
         "dataMart");
   }
 
-  private WaUiMetadata getwaUiMetaDtum(WaTemplate aPage) {
-    WaUiMetadata record = new WaUiMetadata();
-    record.setWaTemplateUid(aPage);
-    return record;
+  private WaUiMetadata getwaUiMetaDatum(WaTemplate aPage) {
+    WaUiMetadata metadata = new WaUiMetadata();
+    metadata.setWaTemplateUid(aPage);
+    return metadata;
   }
 
   private WaRuleMetadata getwaRuleMetaDtum(WaTemplate aPage) {
-    WaRuleMetadata record = new WaRuleMetadata();
-    record.setWaTemplateUid(aPage.getId());
-    return record;
+    WaRuleMetadata metadata = new WaRuleMetadata();
+    metadata.setWaTemplateUid(aPage.getId());
+    return metadata;
   }
 
 
