@@ -1,14 +1,16 @@
 package gov.cdc.nbs.questionbank.pagerules;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import java.util.Arrays;
-import org.junit.jupiter.api.Test;
 import gov.cdc.nbs.questionbank.page.command.PageContentCommand;
 import gov.cdc.nbs.questionbank.pagerules.Rule.Comparator;
 import gov.cdc.nbs.questionbank.pagerules.Rule.RuleFunction;
 import gov.cdc.nbs.questionbank.pagerules.Rule.SourceValue;
 import gov.cdc.nbs.questionbank.pagerules.Rule.TargetType;
 import gov.cdc.nbs.questionbank.pagerules.request.RuleRequest;
+import org.junit.jupiter.api.Test;
+
+import java.util.List;
+
+import static org.assertj.core.api.Assertions.assertThat;
 
 class RequireIfCommandCreatorTest {
 
@@ -35,7 +37,7 @@ class RequireIfCommandCreatorTest {
     String expected = "text, text2";
     String actual = creator.createSourceValues(
         false,
-        Arrays.asList(
+        List.of(
             new SourceValue("id", "text"),
             new SourceValue("id2", "text2")));
     assertThat(actual).isEqualTo(expected);
@@ -46,11 +48,11 @@ class RequireIfCommandCreatorTest {
     String expected = "Age at Onset Units <> must be ( Days, Hours ) Comments";
     String actual = creator.createErrorMessage(
         "Age at Onset Units",
-        Arrays.asList(
+        List.of(
             new SourceValue("D", "Days"),
             new SourceValue("H", "Hours")),
         false,
-        Arrays.asList("Comments"),
+        List.of("Comments"),
         "<>");
     assertThat(actual).isEqualTo(expected);
   }
@@ -60,11 +62,11 @@ class RequireIfCommandCreatorTest {
     String expected = "Age at Onset Units <> must be ( Any Source Value ) Comments";
     String actual = creator.createErrorMessage(
         "Age at Onset Units",
-        Arrays.asList(
+        List.of(
             new SourceValue("D", "Days"),
             new SourceValue("H", "Hours")),
         true,
-        Arrays.asList("Comments"),
+        List.of("Comments"),
         "<>");
     assertThat(actual).isEqualTo(expected);
   }
@@ -74,25 +76,11 @@ class RequireIfCommandCreatorTest {
     String expected = "INV144 ( D , H ) = ^ R ( INV515 )";
     String actual = creator.createExpression(
         "INV144",
-        Arrays.asList(
+        List.of(
             new SourceValue("D", "Days"),
             new SourceValue("H", "Hours")),
         false,
-        Arrays.asList("INV515"),
-        "=");
-    assertThat(actual).isEqualTo(expected);
-  }
-
-  @Test
-  void expression_equal_disable() {
-    String expected = "INV144 ( D , H ) = ^ R ( INV515 )";
-    String actual = creator.createExpression(
-        "INV144",
-        Arrays.asList(
-            new SourceValue("D", "Days"),
-            new SourceValue("H", "Hours")),
-        false,
-        Arrays.asList("INV515"),
+        List.of("INV515"),
         "=");
     assertThat(actual).isEqualTo(expected);
   }
@@ -102,11 +90,11 @@ class RequireIfCommandCreatorTest {
     String expected = "INV144 ( D , H ) <> ^ R ( INV515 )";
     String actual = creator.createExpression(
         "INV144",
-        Arrays.asList(
+        List.of(
             new SourceValue("D", "Days"),
             new SourceValue("H", "Hours")),
         false,
-        Arrays.asList("INV515"),
+        List.of("INV515"),
         "<>");
     assertThat(actual).isEqualTo(expected);
   }
@@ -116,25 +104,11 @@ class RequireIfCommandCreatorTest {
     String expected = "INV144 ( D , H ) <> ^ R ( INV515 , INV616 )";
     String actual = creator.createExpression(
         "INV144",
-        Arrays.asList(
+        List.of(
             new SourceValue("D", "Days"),
             new SourceValue("H", "Hours")),
         false,
-        Arrays.asList("INV515", "INV616"),
-        "<>");
-    assertThat(actual).isEqualTo(expected);
-  }
-
-  @Test
-  void expression_not_equal_enable() {
-    String expected = "INV144 ( D , H ) <> ^ R ( INV515 )";
-    String actual = creator.createExpression(
-        "INV144",
-        Arrays.asList(
-            new SourceValue("D", "Days"),
-            new SourceValue("H", "Hours")),
-        false,
-        Arrays.asList("INV515"),
+        List.of("INV515", "INV616"),
         "<>");
     assertThat(actual).isEqualTo(expected);
   }
@@ -144,11 +118,11 @@ class RequireIfCommandCreatorTest {
     String expected = "INV144 (  )  ^ R ( INV515 )";
     String actual = creator.createExpression(
         "INV144",
-        Arrays.asList(
+        List.of(
             new SourceValue("D", "Days"),
             new SourceValue("H", "Hours")),
         true,
-        Arrays.asList("INV515"),
+        List.of("INV515"),
         "<>");
     assertThat(actual).isEqualTo(expected);
   }
@@ -170,14 +144,14 @@ class RequireIfCommandCreatorTest {
         pgRequireNotElement('INV132');
          }
         }
-          """;
+        """;
 
     String functionName = creator.createJavascriptName("INV144", 999);
     String actual = creator.createJavascript(
         functionName,
         "INV144",
         true,
-        Arrays.asList("NBS102", "INV132"),
+        List.of("NBS102", "INV132"),
         null,
         null);
 
@@ -203,15 +177,15 @@ class RequireIfCommandCreatorTest {
         pgRequireNotElement('INV132');
          }
         }
-            """;
+        """;
 
     String functionName = creator.createJavascriptName("INV144", 999);
     String actual = creator.createJavascript(
         functionName,
         "INV144",
         false,
-        Arrays.asList("NBS102", "INV132"),
-        Arrays.asList(new SourceValue("D", "Days"), new SourceValue("H", "Hours")),
+        List.of("NBS102", "INV132"),
+        List.of(new SourceValue("D", "Days"), new SourceValue("H", "Hours")),
         "=");
 
     assertThat(actual).isEqualTo(expected);
@@ -236,15 +210,15 @@ class RequireIfCommandCreatorTest {
         pgRequireElement('INV132');
          }
         }
-            """;
+        """;
 
     String functionName = creator.createJavascriptName("INV144", 999);
     String actual = creator.createJavascript(
         functionName,
         "INV144",
         false,
-        Arrays.asList("NBS102", "INV132"),
-        Arrays.asList(new SourceValue("D", "Days"), new SourceValue("H", "Hours")),
+        List.of("NBS102", "INV132"),
+        List.of(new SourceValue("D", "Days"), new SourceValue("H", "Hours")),
         "<>");
 
     assertThat(actual).isEqualTo(expected);
@@ -257,25 +231,25 @@ class RequireIfCommandCreatorTest {
         "description",
         "INV154",
         false,
-        Arrays.asList(
+        List.of(
             new SourceValue("D", "Days"),
             new SourceValue("H", "Hours"),
             new SourceValue("N", "Minutes")),
         Comparator.EQUAL_TO,
         TargetType.SUBSECTION,
-        Arrays.asList("DEM161", "DEM196"),
+        List.of("DEM161", "DEM196"),
         "source text",
-        Arrays.asList());
-    PageContentCommand.AddRuleCommand command = creator.create(1887l, request, 3l, 9l);
+        List.of());
+    PageContentCommand.AddRuleCommand command = creator.create(1887L, request, 3L, 9L);
     assertThat(command).isNotNull();
     assertThat(command.targetType()).isEqualTo("SUBSECTION");
     assertThat(command.ruleFunction()).isEqualTo("Require If");
     assertThat(command.description()).isEqualTo("description");
     assertThat(command.comparator()).isEqualTo("=");
     assertThat(command.sourceIdentifier()).isEqualTo(request.sourceIdentifier());
-    assertThat(command.page()).isEqualTo(3l);
-    assertThat(command.userId()).isEqualTo(9l);
-    assertThat(command.ruleId()).isEqualTo(1887l);
+    assertThat(command.page()).isEqualTo(3L);
+    assertThat(command.userId()).isEqualTo(9L);
+    assertThat(command.ruleId()).isEqualTo(1887L);
   }
 
 
@@ -286,21 +260,21 @@ class RequireIfCommandCreatorTest {
         "description",
         "INV154",
         false,
-        Arrays.asList(
+        List.of(
             new SourceValue("D", "Days"),
             new SourceValue("H", "Hours"),
             new SourceValue("N", "Minutes")),
         Comparator.EQUAL_TO,
         TargetType.QUESTION,
-        Arrays.asList("DEM161", "DEM196"),
+        List.of("DEM161", "DEM196"),
         "source text",
-        Arrays.asList());
-    PageContentCommand.UpdateRuleCommand command = creator.update(1887l, request, 3l);
+        List.of());
+    PageContentCommand.UpdateRuleCommand command = creator.update(1887L, request, 3L);
     assertThat(command).isNotNull();
     assertThat(command.targetType()).isEqualTo("QUESTION");
     assertThat(command.description()).isEqualTo("description");
     assertThat(command.comparator()).isEqualTo("=");
     assertThat(command.sourceIdentifier()).isEqualTo(request.sourceIdentifier());
-    assertThat(command.userId()).isEqualTo(3l);
+    assertThat(command.userId()).isEqualTo(3L);
   }
 }
